Fix tests and sonar issues