@@ -17,10 +17,7 @@
 
 package br.com.itsmemario.ecordel.exception;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.AllArgsConstructor;
 import org.springframework.context.MessageSource;
 import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.http.HttpStatus;
@@ -30,10 +27,12 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
+import java.util.List;
+
 @RestControllerAdvice
+@AllArgsConstructor
 public class DefaultExceptionHandler {
 	
-	@Autowired
 	private MessageSource messageSource;
 	
 	@ResponseStatus(code=HttpStatus.BAD_REQUEST)
@@ -46,7 +45,7 @@ public class DefaultExceptionHandler {
 						String msg = messageSource.getMessage(err, LocaleContextHolder.getLocale());
 						return new FormError(err.getField(), msg);
 					}
-				) .collect(Collectors.toList());
+				) .toList();
 	}	
 
 }
